--- a/src/main/webapp/WEB-INF/views/error.html
+++ b/src/main/webapp/WEB-INF/views/error.html
@@ -3,40 +3,33 @@
     xmlns:th="http://www.thymeleaf.org" lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>Расположение</title>
+	<title>Key'n'Door Hotel - Главная страница</title>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="../css/bootstrap.min.css">
-	<link rel="stylesheet" href="../css/style.css">	
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=056f5243-0d5c-4996-a7be-0d2ffd462989" type="text/javascript"></script>
-	<style>
-		.row{
-			margin-bottom: 25px;
-		}
-	</style>
 </head>
 <body>
 	<div class="wrapper">
-		<main class="content">
+		<main class="content course">
 			<header class="header floating d-none d-lg-block">
 				<div class="innerh">
 					<div class="scrollh" style="min-height: 810px;">
-						<div class="logo-div"><a href="/" id="logo"><img src="../img/knd.png" alt="Logo"></a></div>
+						<div class="logo-div"><a href="/" id="logo"><img src="img/knd.png" alt="Logo"></a></div>
 						<nav class="headermenu">
 							<ul id="mtop" class="mainmenu vert" style="width: 750px;">
-								<li><div class="not-moving-div" style="height: 50px;"><a href="/book">Забронировать</a></div></li>
-								<li><div class="moving-div" style="top: -5px; position: absolute;">
+								<li><div class="not-moving-div" style="height: 50px;"><div><a href="/book">Забронировать</a></div></div></li>
+								<li><div class="moving-div">
 										<a href="/location">
-											<svg class="svg-icon" viewBox="0 0 20 20" style="margin-left: 40px;">
+											<span class="mooving">Расположение</span>
+											<svg class="svg-icon" viewBox="0 0 20 20" style="position: absolute; left: 40px;">
 												<path d="M10,1.375c-3.17,0-5.75,2.548-5.75,5.682c0,6.685,5.259,11.276,5.483,11.469c0.152,0.132,0.382,0.132,0.534,0c0.224-0.193,5.481-4.784,5.483-11.469C15.75,3.923,13.171,1.375,10,1.375 M10,17.653c-1.064-1.024-4.929-5.127-4.929-10.596c0-2.68,2.212-4.861,4.929-4.861s4.929,2.181,4.929,4.861C14.927,12.518,11.063,16.627,10,17.653 M10,3.839c-1.815,0-3.286,1.47-3.286,3.286s1.47,3.286,3.286,3.286s3.286-1.47,3.286-3.286S11.815,3.839,10,3.839 M10,9.589c-1.359,0-2.464-1.105-2.464-2.464S8.641,4.661,10,4.661s2.464,1.105,2.464,2.464S11.359,9.589,10,9.589"></path>
 											</svg>
-											<span class="re-mooving">Расположение</span>
 										</a>
 									</div>
 								</li>
-								<li style="margin-left: 121px;"><div class="moving-div">
+								<li><div class="moving-div">
 									    <a href="/photos">
 											<span class="mooving">Фотографии</span>
 											<svg class="svg-icon" viewBox="0 0 20 20" style="position: absolute; left: 30px;">
@@ -63,7 +56,7 @@
 										</a>
 									</div>
 								</li>
-							</ul>
+							</ul> 
 						</nav>
 						<div class="social">
 							<a href="https://vk.com/pragmatic_person" id="vk"><i class="fa fa-vk"></i></a><br>
@@ -100,7 +93,7 @@
 						</g>
 						</svg>
 					</a>
-					<div id="mobileLogo" style="display: none; margin: 22px 20px 20px 20px;"><a href="../index.html"><img src="../img/knd.png" alt="logo"></a></div>
+					<div id="mobileLogo" style="display: none; margin: 22px 20px 20px 20px;"><a href="index.html"><img src="img/knd.png" alt="logo"></a></div>
 				</div>
 				
 				<div id="mobileMenuDown" style="display: none;">
@@ -118,58 +111,14 @@
 				</div>
 			</div>
 			<div id="main_content">
-				<div class="container-fluid">
-					<div class="title">
-						<h1>
-							Норрмальм
-						</h1>
-					</div>
-					<div class="googlemaps">
-						<div style="position: relative;">
-							<div class="sidemenumap">
-								<p>
-									Район <a id="norm" href="https://en.wikipedia.org/wiki/Norrmalm"><u>Норрмальм</u></a> в Стокгольме – это географический и деловой центр шведской столицы. Он является отличным местом для прогулок по паркам, магазинам и знакомства с лучшими историческими и современными достопримечательностями города. Этот квартал поражает своей невероятной архитектурой, сочетающей в себе черты прообразов старинных построек и высоких небоскребов. Последняя его значимая перестройка проводилась после Второй мировой войны, именно тогда на волне стремления к модернизации были снесены многие старые здания и возведены новые, более современные сооружения.</p>
-							</div>
-							<div id="map"></div>
-							
-						</div>
-					</div>
-					<div class="title">
-						<h1>Самые красивые места Стокгольма</h1>
-					</div>
-					<div class="stocholm">
-						<div class="row align-items-center">
-							<div class="col-12 col-lg-6 ">
-								<div class="title">
-									<h3>Старый город</h3>
-								</div>
-								<p>Старый город, до 1980 года официально назывался <b>Город между мостами</b> - исторический центр Стокгольма, находящийся на острове Стадсхолмен. Эта часть города построена в XIII в., поэтому здесь много узких мощёных улочек и переулков, а так же старой архитектуры.</p>
-							</div>
-							<div class="col-12 col-lg-6"><img src="../img/old-town.jpg" class="slider__item" alt="old-town"></div>
-						</div>
-						<div class="row align-items-center">
-							<div class="col-12 col-lg-6 order-lg-1 order-12"><img src="../img/Klara-Church.jpg" class="slider__item" alt="Klara-Church"></div>
-							<div class="col-12 col-lg-6 order-lg-12 order-1">
-								
-								<div class="title">
-									<h3>Церковь Святой Клары</h3>
-								</div>
-								<p>Церковь была разрушена, отстроена вновь, пережила серьезный пожар и реконструкцию города. Сейчас она окружена современными зданиями. Поистине уголок истории в современном городе</p>
-							</div>
-						</div>
-						<div class="row align-items-center">
-							<div class="col-12 col-lg-6 ">
-								<div class="title">
-									<h3>Скиннарвиксбергет</h3>
-								</div>
-								<p>Самая высокая природная точка в центре Стокгольма - любимое место местных жителей и отличное место для пикников. От сюда открывается прекрасный вид на Стокгольмскую ратушу, Старый Город и другие достопримечательности. </p>
-							</div>
-							<div class="col-12 col-lg-6"><img src="../img/skin.jpg" class="slider__item" alt="skin"></div>
+				<div class="container-bg">
+					<div class="slide-bg justify-content-center align-items-center">
+						<div class="text h-100">
+							<h1>Ой... Такой страницы нет</h1>
 						</div>
 					</div>
 				</div>
-				<div th:insert="fragments/footer :: footer">
-                    
+			    <div th:insert="fragments/footer :: footer">  
                 </div>
 			</div>
 		</main>
@@ -177,23 +126,9 @@
 
 
 
-	<script>
-		ymaps.ready(function () {
-   		 var myMap = new ymaps.Map('map', {
-            center: [59.337315, 18.049843],
-            zoom: 15,
-            controls: ['fullscreenControl']
-        }, {
-            searchControlProvider: 'yandex#search'
-        });
-   		 myMap.geoObjects.add(new ymaps.Placemark([59.337655, 18.051646],{
-            iconImageSize: [30, 42],
-            iconImageOffset: [-5, -38]
-        }))
-		});
-	</script>
+
 	<script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
-	<script src="../js/bootstrap.min.js" ></script>
-	<script src="../js/script.js" ></script>
+	<script src="js/script.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
