--- a/src/main/webapp/WEB-INF/views/home.html
+++ b/src/main/webapp/WEB-INF/views/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html xmlns="http://www.w3.org/1999/xhtml"
+    xmlns:th="http://www.thymeleaf.org" lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<title>Key'n'Door Hotel - Главная страница</title>
@@ -20,7 +21,7 @@
 							<ul id="mtop" class="mainmenu vert" style="width: 750px;">
 								<li><div class="not-moving-div" style="height: 50px;"><div><a href="/book">Забронировать</a></div></div></li>
 								<li><div class="moving-div">
-										<a href="location">
+										<a href="/location">
 											<span class="mooving">Расположение</span>
 											<svg class="svg-icon" viewBox="0 0 20 20" style="position: absolute; left: 40px;">
 												<path d="M10,1.375c-3.17,0-5.75,2.548-5.75,5.682c0,6.685,5.259,11.276,5.483,11.469c0.152,0.132,0.382,0.132,0.534,0c0.224-0.193,5.481-4.784,5.483-11.469C15.75,3.923,13.171,1.375,10,1.375 M10,17.653c-1.064-1.024-4.929-5.127-4.929-10.596c0-2.68,2.212-4.861,4.929-4.861s4.929,2.181,4.929,4.861C14.927,12.518,11.063,16.627,10,17.653 M10,3.839c-1.815,0-3.286,1.47-3.286,3.286s1.47,3.286,3.286,3.286s3.286-1.47,3.286-3.286S11.815,3.839,10,3.839 M10,9.589c-1.359,0-2.464-1.105-2.464-2.464S8.641,4.661,10,4.661s2.464,1.105,2.464,2.464S11.359,9.589,10,9.589"></path>
@@ -29,7 +30,7 @@
 									</div>
 								</li>
 								<li><div class="moving-div">
-									    <a href="photos">
+									    <a href="/photos">
 											<span class="mooving">Фотографии</span>
 											<svg class="svg-icon" viewBox="0 0 20 20" style="position: absolute; left: 30px;">
 												<path d="M10,6.536c-2.263,0-4.099,1.836-4.099,4.098S7.737,14.732,10,14.732s4.099-1.836,4.099-4.098S12.263,6.536,10,6.536M10,13.871c-1.784,0-3.235-1.453-3.235-3.237S8.216,7.399,10,7.399c1.784,0,3.235,1.452,3.235,3.235S11.784,13.871,10,13.871M17.118,5.672l-3.237,0.014L12.52,3.697c-0.082-0.105-0.209-0.168-0.343-0.168H7.824c-0.134,0-0.261,0.062-0.343,0.168L6.12,5.686H2.882c-0.951,0-1.726,0.748-1.726,1.699v7.362c0,0.951,0.774,1.725,1.726,1.725h14.236c0.951,0,1.726-0.773,1.726-1.725V7.195C18.844,6.244,18.069,5.672,17.118,5.672 M17.98,14.746c0,0.477-0.386,0.861-0.862,0.861H2.882c-0.477,0-0.863-0.385-0.863-0.861V7.384c0-0.477,0.386-0.85,0.863-0.85l3.451,0.014c0.134,0,0.261-0.062,0.343-0.168l1.361-1.989h3.926l1.361,1.989c0.082,0.105,0.209,0.168,0.343,0.168l3.451-0.014c0.477,0,0.862,0.184,0.862,0.661V14.746z"></path>
@@ -38,7 +39,7 @@
 									</div>
 								</li>
 								<li><div class="moving-div">
-										<a href="services">
+										<a href="/services">
 											<span class="mooving">Подробнее</span>
 											<svg class="svg-icon" viewBox="0 0 20 20 " style="position: absolute; left: 25px;">
 												<path d="M15.396,2.292H4.604c-0.212,0-0.385,0.174-0.385,0.386v14.646c0,0.212,0.173,0.385,0.385,0.385h10.792c0.211,0,0.385-0.173,0.385-0.385V2.677C15.781,2.465,15.607,2.292,15.396,2.292 M15.01,16.938H4.99v-2.698h1.609c0.156,0.449,0.586,0.771,1.089,0.771c0.638,0,1.156-0.519,1.156-1.156s-0.519-1.156-1.156-1.156c-0.503,0-0.933,0.321-1.089,0.771H4.99v-3.083h1.609c0.156,0.449,0.586,0.771,1.089,0.771c0.638,0,1.156-0.518,1.156-1.156c0-0.638-0.519-1.156-1.156-1.156c-0.503,0-0.933,0.322-1.089,0.771H4.99V6.531h1.609C6.755,6.98,7.185,7.302,7.688,7.302c0.638,0,1.156-0.519,1.156-1.156c0-0.638-0.519-1.156-1.156-1.156c-0.503,0-0.933,0.322-1.089,0.771H4.99V3.062h10.02V16.938z M7.302,13.854c0-0.212,0.173-0.386,0.385-0.386s0.385,0.174,0.385,0.386s-0.173,0.385-0.385,0.385S7.302,14.066,7.302,13.854 M7.302,10c0-0.212,0.173-0.385,0.385-0.385S8.073,9.788,8.073,10s-0.173,0.385-0.385,0.385S7.302,10.212,7.302,10 M7.302,6.146c0-0.212,0.173-0.386,0.385-0.386s0.385,0.174,0.385,0.386S7.899,6.531,7.688,6.531S7.302,6.358,7.302,6.146"></path>
@@ -47,7 +48,7 @@
 									</div>
 								</li>
 								<li><div class="moving-div">
-										<a href="rooms">
+										<a href="/rooms">
 											<span class="mooving">Номера</span>
 											<svg class="svg-icon" viewBox="0 0 390 390" style="position: absolute; left: 10px;">
 												<path xmlns="http://www.w3.org/2000/svg" d="M337.6,158.6v-0.4V97.8c0-27.2-19.2-37.2-37.2-37.2h-228c-18,0-37.2,9.6-37.2,37.2v60.4v0.4c-18,2-35.2,14-35.2,41.6v47.2    c0,8,6.4,14.4,14.4,14.4h4.8V299c0,8,6.4,14.4,14.4,14.4h13.6c8,0,14.4-6.4,14.4-14.4v-37.6h250.8V299c0,8,6.4,14.4,14.4,14.4    h13.6c8,0,14.4-6.4,14.4-14.4v-37.6h4.8c8,0,14.4-6.4,14.4-14.4v-46.8C372.8,172.6,355.6,160.6,337.6,158.6z M48.8,97.8h0.8    C49.6,79,62,75,72.4,75h228c10.4,0,22.8,4,22.8,22.8v60.4h-10.8v-34.4c0-8-6.4-14.4-14.4-14.4h-88c-8,0-14.4,6.4-14.4,14.4v34.4    h-16.8v-34.4c0-8-6.4-14.4-14.4-14.4h-88c-8,0-14.4,6.4-14.4,14.4v34.4H48.8V97.8z M298,123.8v34.4h-88v-34.4H298z M165.2,123.8    v34.4h-88v-34.4H165.2z M46.8,299H33.2v-37.6h13.6V299z M339.6,299H326v-37.6h13.6V299z M358.4,247.4h-18.8H326H46.8H33.2H14    v-21.2h344.4V247.4z M358.4,211.8H14v-11.6c0-24,17.6-27.6,27.6-27.6h7.6h27.6h88H210h88h25.2h7.6c10.4,0,27.6,3.6,27.6,27.6    V211.8z"/>
@@ -206,62 +207,9 @@
 					</div>
 
 				</div>
-				<footer>
-					<div class="container-fluid">
-						<div class="row" style="margin-top: 10px;">
-							<div class="col-12 col-sm-6 d-flex justify-content-center">
-								<ul class="footerContact">
-									<li>
-										<table>
-											<tr>
-												<td class="imageTable">
-													<img class="footerImages" style="width: 27px; margin-bottom: 20px;" src="img/footer/Telephone.png" alt="Telephone">
-												</td>
-												<td>
-													<p>
-														<b>Телефон</b>:<br>+7-989-532-98-29
-													</p>	
-												</td>
-											</tr>	
-										</table>
-									</li>
-									<li>
-										<table>
-											<tr>
-												<td class="imageTable">
-													<img class="footerImages" style="width: 35px; margin-bottom: 20px;" src="img/footer/E-mail.png" alt="E-mail">
-												</td>
-												<td>
-													<p>
-														<b>E-mail</b>:<br>aleksejceresnev43@yandex.ru
-													</p>	
-												</td>
-											</tr>	
-										</table>
-									</li>
-									<li>
-										<table>
-											<tr>
-												<td class="imageTable">
-													<img class="footerImages" style="width: 27px; margin-bottom: 20px;" src="img/footer/location.png" alt="E-mail">
-												</td>
-												<td>
-													<p>
-														<b>Местоположение</b>:<br>Any location in Sweden
-													</p>	
-												</td>
-											</tr>	
-										</table>
-									</li>
-								</ul>
-							</div>
-							<div class="col-12 col-sm-6">
-								<h4>Правовая информация.</h4>
-								<p>Фотографии взяты с сайта <a href="http://uniquehotel.se/">Unique Hotel</a>.<br> Иконки сделаны <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> и взяты из <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a><br>Сайт сделан <a href="https://vk.com/pragmatic_person">Черешневым Алексеем</a> ВИС-11</p>
-							</div>
-						</div>
-					</div>
-				</footer>
+			    <div th:insert="fragments/footer :: footer">
+                    
+                </div>
 			</div>
 			
 		</main>
