--- a/src/main/webapp/WEB-INF/views/photos.html
+++ b/src/main/webapp/WEB-INF/views/photos.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html xmlns="http://www.w3.org/1999/xhtml"
+    xmlns:th="http://www.thymeleaf.org" lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Фотографии</title>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
@@ -168,65 +169,10 @@
 						</div>
 					</div>
 				</div>
-				<footer>
-					<div class="container-fluid">
-						<div class="row" style="margin-top: 10px;">
-							<div class="col-12 col-sm-6 d-flex justify-content-center">
-								<ul class="footerContact">
-									<li>
-										<table>
-											<tr>
-												<td class="imageTable">
-													<img class="footerImages" style="width: 27px; margin-bottom: 20px;" src="../img/footer/Telephone.png" alt="Telephone">
-												</td>
-												<td>
-													<p>
-														<b>Телефон</b>:<br>+7-989-532-98-29
-													</p>	
-												</td>
-											</tr>	
-										</table>
-									</li>
-									<li>
-										<table>
-											<tr>
-												<td class="imageTable">
-													<img class="footerImages" style="width: 35px; margin-bottom: 20px;" src="../img/footer/E-mail.png" alt="E-mail">
-												</td>
-												<td>
-													<p>
-														<b>E-mail</b>:<br>aleksejceresnev43@yandex.ru
-													</p>	
-												</td>
-											</tr>	
-										</table>
-									</li>
-									<li>
-										<table>
-											<tr>
-												<td class="imageTable">
-													<img class="footerImages" style="width: 27px; margin-bottom: 20px;" src="../img/footer/location.png" alt="E-mail">
-												</td>
-												<td>
-													<p>
-														<b>Местоположение</b>:<br>Any location in Sweden
-													</p>	
-												</td>
-											</tr>	
-										</table>
-									</li>
-								</ul>
-							</div>
-							<div class="col-12 col-sm-6">
-								<h4>Правовая информация.</h4>
-								<p>Фотографии взяты с сайта <a href="http://uniquehotel.se/">Unique Hotel</a>.<br> Иконки сделаны <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> и взяты из <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a><br>Сайт сделан <a href="https://vk.com/pragmatic_person">Черешневым Алексеем</a> ВИС-11</p>
-							</div>
-						</div>
-					</div>
-				</footer>
+				<div th:insert="fragments/footer :: footer">
+                    
+                </div>
 			</div>
-
-
 		</main>
 	</div>
 
