Rename Client to User. Small fixes in .html

--- a/src/main/webapp/WEB-INF/views/book.html
+++ b/src/main/webapp/WEB-INF/views/book.html
@@ -86,7 +86,7 @@
 								<div class="row">
 									<div class="manage-div col-6" >
 										<p>Дата заселения-выселения*:</p>
-										<input th:field="*{dates}" type='text' class="datepicker-here name-input" id="date" required="required" pattern="(0[1-9]|1[0-9]|2[0-9]|3[01]).(0[1-9]|1[012]).[0-9]{4}-(0[1-9]|1[0-9]|2[0-9]|3[01]).(0[1-9]|1[012]).[0-9]{4}" placeholder="ДД.ММ.ГГГГ-ДД.ММ.ГГГГ"> 
+										<input th:field="*{dates}" type='text' class="datepicker-here name-input" id="date" autocomplete="off" required="required" pattern="(0[1-9]|1[0-9]|2[0-9]|3[01]).(0[1-9]|1[012]).[0-9]{4}-(0[1-9]|1[0-9]|2[0-9]|3[01]).(0[1-9]|1[012]).[0-9]{4}" placeholder="ДД.ММ.ГГГГ-ДД.ММ.ГГГГ"> 
 									</div>
 									<div class="manage-div col-6">
 										<div class="d-inline-block w-100">
