--- a/src/main/webapp/WEB-INF/views/home.html
+++ b/src/main/webapp/WEB-INF/views/home.html
@@ -5,8 +5,8 @@
 	<meta charset="UTF-8">
 	<title>Key'n'Door Hotel - Главная страница</title>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/css/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -95,9 +95,9 @@
 					</div>
 					<div class="three_pictures container-fluid">
 						<div class="image-container">
-							<div class="block-pictures"><img src="img/bedroom.jpg" alt="bedroom"></div>
-							<div class="block-pictures block-pictures-middle"><img src="img/breakfast.jpg" alt="breakfast"></div>
-							<div class="block-pictures"><img src="img/holl.jpg" alt="holl"></div>
+							<div class="block-pictures"><img src="/img/bedroom.jpg" alt="bedroom"></div>
+							<div class="block-pictures block-pictures-middle"><img src="/img/breakfast.jpg" alt="breakfast"></div>
+							<div class="block-pictures"><img src="/img/holl.jpg" alt="holl"></div>
 						</div>
 					</div>
 					<div id="container-fluid">
